@@ -457,7 +457,7 @@ sub get {
 
 =head2 $mech->post( $uri, content => $content )
 
-POSTs I<$content> to $uri.  Returns an L<HTTP::Response> object.
+POSTs I<$content> to I<$uri>.  Returns an L<HTTP::Response> object.
 I<$uri> can be a well-formed URI string, a L<URI> object, or a
 L<WWW::Mechanize::Link> object.
 
@@ -480,9 +480,12 @@ sub post {
 
 =head2 $mech->put( $uri, content => $content )
 
-PUTs I<$content> to $uri.  Returns an L<HTTP::Response> object.
+PUTs I<$content> to I<$uri>.  Returns an L<HTTP::Response> object.
 I<$uri> can be a well-formed URI string, a L<URI> object, or a
 L<WWW::Mechanize::Link> object.
+
+    my $res = $mech->head( $uri );
+    my $res = $mech->head( $uri , $field_name => $value, ... );
 
 =cut
 
@@ -508,6 +511,29 @@ sub _SUPER_put {
     my($self, @parameters) = @_;
     my @suff = $self->_process_colonic_headers(\@parameters,1);
     return $self->request( HTTP::Request::Common::PUT( @parameters ), @suff );
+}
+
+=head2 $mech->head ($uri )
+
+Performs a HEAD request to I<$uri>. Returns an L<HTTP::Response> object.
+I<$uri> can be a well-formed URI string, a L<URI> object, or a
+L<WWW::Mechanize::Link> object.
+
+=cut
+
+sub head {
+    my $self = shift;
+    my $uri = shift;
+
+    $uri = $uri->url if ref($uri) eq 'WWW::Mechanize::Link';
+
+    $uri = $self->base
+            ? URI->new_abs( $uri, $self->base )
+            : URI->new( $uri );
+
+    # It appears we are returning a super-class method,
+    # but it in turn calls the request() method here in Mechanize
+    return $self->SUPER::head( $uri->as_string, @_ );
 }
 
 =head2 $mech->reload()
