@@ -1,6 +1,10 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [ENHANCEMENTS]
+    - Add a head() method to allow relative URLs (Julien Fiegehenn)
+
+    [DOCUMENTATION]
     - Document that form_id() accepts an id, not a name (GH#319) (Olaf Alders)
 
 2.03      2020-11-10 14:47:04Z
